# Nexploy

./: .env.example  Dockerfile  LICENSE  README.md  package.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy_docs.yml  merge-dependabot.yml
client/: index.html  package.json  vite.config.js
client/src/: App.jsx
docs/: contributing.md  index.md  scripting.md
docs/.vitepress/: config.mjs
docs/public/: CNAME
runner/: Cargo.toml
runner/src/: main.rs
runner/src/api/: compose.rs  console.rs  docker.rs  env.rs  fetch.rs  fs.rs  mod.rs  shell.rs  sleep.rs  utils.rs
runner/src/utils/: js_value.rs  mod.rs  path.rs
scripts/: generate-openapi.js
server/: index.js  openapi.js
server/adapters/: BaseAdapter.js  SSHAdapter.js  SessionManager.js  index.js
server/controllers/: account.js  appInstall.js  auth.js  container.js  deployment.js  gitCredential.js  image.js  project.js  server.js  source.js  stack.js
server/middlewares/: auth.js  permission.js  projectAccess.js
server/migrations/: 0001-initial-database-setup.js  0002-servers-table.js  0003-containers-table.js  0004-stacks-table.js  0007-deployments-table.js  0008-git-credentials-table.js  0009-projects-tables.js  0010-installed-apps-config.js
server/models/: Account.js  Container.js  GitCredential.js  InstalledApp.js  Project.js  ProjectMember.js  ProjectResource.js  Server.js  Stack.js
server/routes/: account.js  apps.js  auth.js  container.js  deployment.js  gitCredential.js  image.js  project.js  server.js  service.js  (+3 more)
(+126 files in other folders)
