[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-js = "0.4.1"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
